# mlops_pipelines

./: .pre-commit-config.yaml  Dockerfile  README.md  dev-requirements.in  pyproject.toml  requirements.in  requirements.txt  test.tfrecord
flyte_examples/: doc2vec.model  lda.model  lda.model.id2word  lda.model.state  nlp_workflow.py  run.py  tf_mnist.py  tf_tfrecords.py  vaex_wf.py  word2vec_workflow.py
flyte_examples/nlp_processing/: requirements.in  word2vec_and_lda.py
flyte_transformers/: vaex_typetransformer.py
plugins/flytekit-vaex/flytekitplugins/vaex/: __init__.py  sd_transformers.py
plugins/flytekit-vaex/tests/: test_vaex_plugin_sd.py
tests/keras/: test_native.py  test_transformations.py
tests/tensorflow/: test_native.py  test_transformations.py
transformers/keras/: native.py
transformers/tensorflow/record/: __init__.py  records.py
