[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility/
profile = "black"


[tool.poetry]
name = "mle_pipelines"
version = "0.1.0"
description = "Trying out flyte features for various Ml workflows"
authors = ["Ryan Nazareth <ryankarlos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^1.5.0"
xgboost = "^1.6.2"
sklearn = "^0.0"
flytekit = "^1.1.3"
joblib = "^1.2.0"
dataclasses-json = "^0.5.7"
requests = {version = "^2.28.1", python = ">=3.9,<4"}


[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = "^22.8.0"
isort = {version = "^5.10.1", python = ">=3.9,<4.0"}
flake8 = "~5.0.4"

